--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 */
 
 /* Basic */
-
 	body {
 		background: #fff;
 	}
@@ -155,7 +154,7 @@
 	}
 
 	header p {
-		color: #bbb;
+		color: #717171;
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
